--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <script>
-          alert('tsunami')
+            window.location="https://yellow-seed.org/handbook/"+window.location.pathname;
         </script>
     </body>
 </html>
